--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             line-height: 1.6;
-            color: #e7d3c7;
-            background: linear-gradient(135deg, #1c1917 0%, #92400e 50%, #ea580c 100%);
+            color: #fffbeb;
+            background: linear-gradient(135deg, #fef3c7 0%, #fde68a 50%, #fed7aa 100%);
             min-height: 100vh;
         }
 
@@ -30,9 +30,9 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background: rgba(28, 25, 23, 0.3);
+            background: rgba(254, 243, 199, 0.95);
             backdrop-filter: blur(10px);
-            border-bottom: 1px solid rgba(251, 146, 60, 0.2);
+            border-bottom: 1px solid rgba(146, 64, 14, 0.2);
             z-index: 1000;
             padding: 1rem 0;
         }
@@ -49,13 +49,14 @@
         .logo {
             font-size: 2rem;
             font-weight: bold;
-            color: #fb923c;
+            color: #b45309;
             text-decoration: none;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
 
         .logo-sub {
             font-size: 0.7rem;
-            color: rgba(251, 146, 60, 0.7);
+            color: #92400e;
             margin-left: 10px;
             letter-spacing: 2px;
         }
@@ -66,21 +67,23 @@
         }
 
         nav a {
-            color: #e7d3c7;
+            color: #451a03;
             text-decoration: none;
-            font-weight: 300;
-            transition: color 0.3s;
+            font-weight: 500;
+            transition: all 0.3s;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.1);
         }
 
         nav a:hover {
-            color: #fb923c;
+            color: #b45309;
+            transform: translateY(-1px);
         }
 
         .mobile-menu-btn {
             display: none;
             background: none;
             border: none;
-            color: #fb923c;
+            color: #b45309;
             font-size: 1.5rem;
             cursor: pointer;
         }
@@ -93,7 +96,7 @@
             justify-content: center;
             text-align: center;
             position: relative;
-            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.3)), url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080"><rect fill="%23292524" width="1920" height="1080"/></svg>');
+            background: linear-gradient(rgba(69, 26, 3, 0.7), rgba(146, 64, 14, 0.5)), url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080"><rect fill="%23fed7aa" width="1920" height="1080"/></svg>');
             background-size: cover;
             background-position: center;
         }
@@ -106,23 +109,27 @@
         .badge {
             display: inline-block;
             padding: 8px 16px;
-            border: 1px solid #fdba74;
-            color: #fb923c;
-            background: rgba(0,0,0,0.2);
+            border: 1px solid #fbbf24;
+            color: #fbbf24;
+            background: rgba(69, 26, 3, 0.8);
             border-radius: 25px;
             font-size: 0.9rem;
             margin-bottom: 2rem;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.3);
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
 
         .hero h1 {
             font-size: 4rem;
             font-weight: bold;
             margin-bottom: 1rem;
-            color: white;
+            color: #fffbeb;
+            text-shadow: 0 2px 8px rgba(0,0,0,0.3);
         }
 
         .hero .brand {
-            color: #fb923c;
+            color: #fbbf24;
+            text-shadow: 0 0 20px rgba(251, 191, 36, 0.5);
         }
 
         .hero .tagline {
@@ -130,13 +137,16 @@
             font-weight: 300;
             font-style: italic;
             margin-bottom: 2rem;
+            color: #fde68a;
+            text-shadow: 0 2px 6px rgba(0,0,0,0.2);
         }
 
         .hero p {
             font-size: 1.2rem;
             margin-bottom: 2rem;
-            color: #e7d3c7;
+            color: #fffbeb;
             font-weight: 300;
+            text-shadow: 0 1px 3px rgba(0,0,0,0.2);
         }
 
         .btn-group {
@@ -155,26 +165,33 @@
             transition: all 0.3s;
             text-decoration: none;
             display: inline-block;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
 
         .btn-primary {
-            background: #c2410c;
-            color: white;
+            background: linear-gradient(135deg, #b45309, #92400e);
+            color: #fffbeb;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.2);
         }
 
         .btn-primary:hover {
-            background: #9a3412;
+            background: linear-gradient(135deg, #92400e, #451a03);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 12px rgba(0,0,0,0.2);
         }
 
         .btn-outline {
-            background: transparent;
-            color: #fb923c;
-            border: 1px solid #fdba74;
+            background: rgba(255, 251, 235, 0.1);
+            color: #fbbf24;
+            border: 1px solid #fbbf24;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.2);
         }
 
         .btn-outline:hover {
-            background: #fb923c;
-            color: black;
+            background: #fbbf24;
+            color: #451a03;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 12px rgba(251, 191, 36, 0.3);
         }
 
         /* Sections */
@@ -186,18 +203,20 @@
             text-align: center;
             font-size: 3rem;
             font-weight: bold;
-            color: #fb923c;
+            color: #451a03;
             margin-bottom: 1rem;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
 
         .section-subtitle {
             text-align: center;
             font-size: 1.2rem;
-            color: rgba(231, 211, 199, 0.8);
+            color: #92400e;
             margin-bottom: 3rem;
             max-width: 600px;
             margin-left: auto;
             margin-right: auto;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.1);
         }
 
         /* Experience Grid */
@@ -209,39 +228,45 @@
         }
 
         .experience-card {
-            background: rgba(28, 25, 23, 0.4);
-            border: 1px solid rgba(251, 146, 60, 0.2);
-            border-radius: 12px;
+            background: linear-gradient(135deg, rgba(69, 26, 3, 0.9), rgba(146, 64, 14, 0.8));
+            border: 1px solid rgba(251, 191, 36, 0.3);
+            border-radius: 16px;
             padding: 2rem;
             text-align: center;
-            transition: background 0.3s;
+            transition: all 0.3s;
+            box-shadow: 0 8px 25px rgba(0,0,0,0.15);
         }
 
         .experience-card:hover {
-            background: rgba(28, 25, 23, 0.6);
+            background: linear-gradient(135deg, rgba(69, 26, 3, 1), rgba(146, 64, 14, 0.9));
+            transform: translateY(-5px);
+            box-shadow: 0 12px 35px rgba(0,0,0,0.2);
         }
 
         .experience-card .icon {
             width: 48px;
             height: 48px;
             margin: 0 auto 1rem;
-            color: #fb923c;
+            color: #fbbf24;
+            filter: drop-shadow(0 2px 4px rgba(0,0,0,0.2));
         }
 
         .experience-card h3 {
             font-size: 1.3rem;
-            color: #fb923c;
+            color: #fbbf24;
             margin-bottom: 1rem;
+            text-shadow: 0 1px 3px rgba(0,0,0,0.3);
         }
 
         .experience-card p {
-            color: rgba(231, 211, 199, 0.7);
+            color: #fffbeb;
             font-weight: 300;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.2);
         }
 
         /* Menu Grid */
         .menu-bg {
-            background: rgba(0, 0, 0, 0.2);
+            background: rgba(253, 230, 138, 0.3);
         }
 
         .menu-grid {
@@ -252,22 +277,24 @@
         }
 
         .menu-card {
-            background: linear-gradient(135deg, rgba(28, 25, 23, 0.6), rgba(194, 65, 12, 0.2));
-            border: 1px solid rgba(251, 146, 60, 0.3);
-            border-radius: 12px;
+            background: linear-gradient(135deg, rgba(69, 26, 3, 0.95), rgba(146, 64, 14, 0.9));
+            border: 1px solid rgba(251, 191, 36, 0.4);
+            border-radius: 16px;
             overflow: hidden;
-            transition: transform 0.3s;
+            transition: all 0.3s;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
         }
 
         .menu-card:hover {
-            transform: scale(1.05);
+            transform: scale(1.03);
+            box-shadow: 0 15px 40px rgba(0,0,0,0.25);
         }
 
         .menu-card-image {
             height: 200px;
-            background: #44403c;
+            background: linear-gradient(135deg, #92400e, #451a03);
             position: relative;
-            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 200"><rect fill="%23292524" width="400" height="200"/></svg>');
+            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 200"><rect fill="%23451a03" width="400" height="200"/></svg>');
             background-size: cover;
         }
 
@@ -275,11 +302,13 @@
             position: absolute;
             top: 1rem;
             right: 1rem;
-            background: #c2410c;
-            color: white;
-            padding: 4px 12px;
-            border-radius: 15px;
+            background: linear-gradient(135deg, #fbbf24, #f59e0b);
+            color: #451a03;
+            padding: 6px 14px;
+            border-radius: 20px;
             font-size: 0.8rem;
+            font-weight: 600;
+            box-shadow: 0 3px 6px rgba(0,0,0,0.2);
         }
 
         .menu-card-content {
@@ -288,14 +317,16 @@
 
         .menu-card h3 {
             font-size: 1.5rem;
-            color: #fb923c;
+            color: #fbbf24;
             margin-bottom: 0.5rem;
+            text-shadow: 0 1px 3px rgba(0,0,0,0.3);
         }
 
         .menu-card p {
-            color: rgba(231, 211, 199, 0.7);
+            color: #fffbeb;
             margin-bottom: 1rem;
             font-weight: 300;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.2);
         }
 
         .menu-card-footer {
@@ -307,7 +338,8 @@
         .price {
             font-size: 1.5rem;
             font-weight: bold;
-            color: #fb923c;
+            color: #fbbf24;
+            text-shadow: 0 1px 3px rgba(0,0,0,0.3);
         }
 
         .stars {
@@ -316,8 +348,9 @@
         }
 
         .star {
-            color: #fb923c;
+            color: #fbbf24;
             font-size: 1rem;
+            filter: drop-shadow(0 1px 2px rgba(0,0,0,0.3));
         }
 
         /* Location Section */
@@ -331,14 +364,16 @@
 
         .location-info h2 {
             font-size: 3rem;
-            color: #fb923c;
+            color: #451a03;
             margin-bottom: 2rem;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
 
         .location-info p {
             font-size: 1.2rem;
             margin-bottom: 2rem;
-            color: rgba(231, 211, 199, 0.8);
+            color: #92400e;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.1);
         }
 
         .contact-item {
@@ -346,33 +381,40 @@
             align-items: flex-start;
             gap: 1rem;
             margin-bottom: 1.5rem;
+            padding: 1rem;
+            background: rgba(69, 26, 3, 0.1);
+            border-radius: 8px;
+            border-left: 4px solid #b45309;
         }
 
         .contact-item .icon {
             width: 24px;
             height: 24px;
-            color: #fb923c;
+            color: #b45309;
             margin-top: 4px;
         }
 
         .contact-item h4 {
-            color: #fb923c;
+            color: #451a03;
             margin-bottom: 0.5rem;
+            font-weight: 600;
         }
 
         .contact-item p {
-            color: rgba(231, 211, 199, 0.7);
+            color: #92400e;
             margin: 0;
+            font-weight: 500;
         }
 
         .location-image {
             height: 400px;
-            background: linear-gradient(135deg, rgba(194, 65, 12, 0.2), rgba(0, 0, 0, 0.4));
-            border: 1px solid rgba(251, 146, 60, 0.2);
-            border-radius: 16px;
+            background: linear-gradient(135deg, rgba(69, 26, 3, 0.9), rgba(146, 64, 14, 0.7));
+            border: 2px solid rgba(251, 191, 36, 0.3);
+            border-radius: 20px;
             position: relative;
-            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 400"><rect fill="%23292524" width="500" height="400"/></svg>');
+            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 400"><rect fill="%23451a03" width="500" height="400"/></svg>');
             background-size: cover;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
         }
 
         .location-pin {
@@ -381,23 +423,23 @@
             right: -24px;
             width: 96px;
             height: 96px;
-            background: #c2410c;
+            background: linear-gradient(135deg, #fbbf24, #f59e0b);
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 8px 32px rgba(251, 191, 36, 0.4);
         }
 
         .location-pin .icon {
             width: 48px;
             height: 48px;
-            color: white;
+            color: #451a03;
         }
 
         /* CTA Section */
         .cta-bg {
-            background: linear-gradient(90deg, rgba(194, 65, 12, 0.3), rgba(28, 25, 23, 0.4));
+            background: linear-gradient(90deg, rgba(253, 230, 138, 0.5), rgba(254, 215, 170, 0.4));
         }
 
         .cta-content {
@@ -408,8 +450,10 @@
 
         /* Footer */
         footer {
-            border-top: 1px solid rgba(251, 146, 60, 0.2);
+            background: linear-gradient(135deg, rgba(69, 26, 3, 0.95), rgba(146, 64, 14, 0.9));
+            border-top: 1px solid rgba(251, 191, 36, 0.2);
             padding: 3rem 0;
+            color: #fffbeb;
         }
 
         .footer-grid {
@@ -421,13 +465,15 @@
 
         .footer-brand h3 {
             font-size: 2rem;
-            color: #fb923c;
+            color: #fbbf24;
             margin-bottom: 1rem;
+            text-shadow: 0 1px 3px rgba(0,0,0,0.3);
         }
 
         .footer-brand p {
-            color: rgba(231, 211, 199, 0.7);
+            color: #fffbeb;
             margin-bottom: 1rem;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.2);
         }
 
         .social-links {
@@ -438,23 +484,27 @@
         .social-link {
             width: 40px;
             height: 40px;
-            background: #c2410c;
+            background: linear-gradient(135deg, #fbbf24, #f59e0b);
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: white;
+            color: #451a03;
             text-decoration: none;
-            transition: background 0.3s;
+            transition: all 0.3s;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         }
 
         .social-link:hover {
-            background: #9a3412;
+            background: linear-gradient(135deg, #f59e0b, #d97706);
+            transform: translateY(-2px);
+            box-shadow: 0 6px 12px rgba(0,0,0,0.3);
         }
 
         .footer-section h4 {
-            color: #fb923c;
+            color: #fbbf24;
             margin-bottom: 1rem;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.3);
         }
 
         .footer-section ul {
@@ -466,20 +516,22 @@
         }
 
         .footer-section ul li a {
-            color: rgba(231, 211, 199, 0.7);
+            color: #fffbeb;
             text-decoration: none;
-            transition: color 0.3s;
+            transition: all 0.3s;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.2);
         }
 
         .footer-section ul li a:hover {
-            color: #fb923c;
+            color: #fbbf24;
+            text-shadow: 0 0 10px rgba(251, 191, 36, 0.5);
         }
 
         .footer-bottom {
-            border-top: 1px solid rgba(251, 146, 60, 0.2);
+            border-top: 1px solid rgba(251, 191, 36, 0.2);
             padding-top: 2rem;
             text-align: center;
-            color: rgba(231, 211, 199, 0.6);
+            color: rgba(255, 251, 235, 0.8);
         }
 
         /* Mobile Styles */
@@ -490,10 +542,11 @@
                 top: 100%;
                 left: 0;
                 right: 0;
-                background: rgba(28, 25, 23, 0.95);
+                background: rgba(254, 243, 199, 0.98);
                 flex-direction: column;
                 padding: 1rem;
                 gap: 1rem;
+                box-shadow: 0 4px 12px rgba(0,0,0,0.1);
             }
 
             nav.active {
@@ -538,40 +591,60 @@
 
         /* Animations */
         @keyframes pulse {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.5; }
+            0%, 100% { opacity: 1; transform: scale(1); }
+            50% { opacity: 0.8; transform: scale(1.05); }
+        }
+
+        @keyframes glow {
+            0%, 100% { text-shadow: 0 0 5px rgba(251, 191, 36, 0.5); }
+            50% { text-shadow: 0 0 20px rgba(251, 191, 36, 0.8), 0 0 30px rgba(251, 191, 36, 0.6); }
         }
 
         .floating-dot {
             position: absolute;
             border-radius: 50%;
-            animation: pulse 2s infinite;
+            animation: pulse 3s infinite;
         }
 
         .dot-1 {
             top: 25%;
             left: 10%;
-            width: 8px;
-            height: 8px;
-            background: #fb923c;
+            width: 12px;
+            height: 12px;
+            background: radial-gradient(circle, #fbbf24, #f59e0b);
+            box-shadow: 0 0 20px rgba(251, 191, 36, 0.6);
         }
 
         .dot-2 {
             top: 33%;
             right: 20%;
-            width: 12px;
-            height: 12px;
-            background: #fdba74;
+            width: 16px;
+            height: 16px;
+            background: radial-gradient(circle, #fde68a, #fbbf24);
+            box-shadow: 0 0 25px rgba(253, 230, 138, 0.7);
             animation-delay: 1s;
         }
 
         .dot-3 {
             bottom: 25%;
             left: 25%;
-            width: 4px;
-            height: 4px;
-            background: #ea580c;
+            width: 8px;
+            height: 8px;
+            background: radial-gradient(circle, #fed7aa, #fdba74);
+            box-shadow: 0 0 15px rgba(254, 215, 170, 0.5);
             animation-delay: 0.5s;
+        }
+
+        /* Additional luminous effects */
+        .hero .brand {
+            animation: glow 4s ease-in-out infinite;
+        }
+
+        .section-title {
+            background: linear-gradient(135deg, #451a03, #92400e, #b45309);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
     </style>
 </head>
@@ -691,7 +764,7 @@
 
                 <div class="menu-card">
                     <div class="menu-card-image">
-                        <div class="menu-badge" style="background: #059669;">Seasonal</div>
+                        <div class="menu-badge" style="background: linear-gradient(135deg, #fed7aa, #fdba74);">Seasonal</div>
                     </div>
                     <div class="menu-card-content">
                         <h3>Lake Kariba Catch</h3>
